--- a/style/style.css
+++ b/style/style.css
@@ -67,7 +67,7 @@ header .menu-btn{
 }
 
 .banner{
-    background-image: url(/image/home-1.png);
+    background-image: url(image/home-1.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -230,6 +230,9 @@ header .menu-btn{
 
 
 /* contact */
+.section4{
+    padding: 80px;
+}
 .contact-wrap{
     display: flex;
     justify-content: space-evenly;
@@ -285,7 +288,7 @@ header .menu-btn{
 
 /* footer */
 .footer-sec1{
-    padding: 100px;
+    padding: 100px 80px;
     text-align: center;
     
 }
@@ -380,7 +383,7 @@ header nav a:hover{
 }
 
 .banner{
-    background-image: url(/image/mobile_banner.png);
+    background-image: url(image/mobile_banner.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -706,7 +709,7 @@ header nav a:hover{
     }
     
     .banner{
-        background-image: url(/image/mobile_banner.png);
+        background-image: url(image/mobile_banner.png);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
