--- a/style/style.css
+++ b/style/style.css
@@ -67,7 +67,7 @@ header .menu-btn{
 }
 
 .banner{
-    background-image: url(../image/home-1.png);
+    background-image: url('../image/home-1.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -383,7 +383,7 @@ header nav a:hover{
 }
 
 .banner{
-    background-image: url(image/mobile_banner.png);
+    background-image: url('..image/mobile_banner.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -709,7 +709,7 @@ header nav a:hover{
     }
     
     .banner{
-        background-image: url(image/mobile_banner.png);
+        background-image: url('..image/mobile_banner.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
