--- a/style/style.css
+++ b/style/style.css
@@ -71,7 +71,7 @@ header .menu-btn{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 /* section 1 */
 /* .banner{
@@ -229,6 +229,12 @@ header .menu-btn{
 /* contact */
 .section4{
     padding: 80px;
+    background-image: url('../image/contact.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-color: rgba(0,0,0,0.5);
 }
 .contact-wrap{
     display: flex;
@@ -245,14 +251,14 @@ header .menu-btn{
 }
 .section4 h2{
     font-size: 22px;
-    color: #000;
+    color: #fff;
     font-weight: 700;
     text-align: center;
     padding-bottom: 50px;
 }
 .section4 h3{
     font-size: 35px;
-    color: #9a734a;
+    color: #000;
     font-weight: 600;
     text-align: left;
     margin-bottom: 20px;
@@ -379,12 +385,12 @@ header nav a:hover{
     transition: 1s;
 }
 
-.banner{
+/* .banner{
     background-image: url('../image/mobile_banner.png');
     background-position:center;
     background-size: cover;
     background-repeat: no-repeat;
-}
+} */
 
 .banner .container{
     padding:  240px 40px;
@@ -709,14 +715,14 @@ header nav a:hover{
         transition: 1s;
     }
     
-    .banner{
+    /* .banner{
         background-image: url('../image/mobile_banner.png');
         background-position:center;
         background-size:cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
         width: 100%;
-    }
+    } */
     /* section 1 */
     /* .banner{
        
@@ -884,6 +890,7 @@ header nav a:hover{
     /* contact */
     .section4{
         padding: 30px;
+        
     }
     .contact-wrap{
         padding: 30px;
